# JFramework

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt
Testing/Temporary/: CTestCostData.txt
cmake/: GenesisConfig.cmake.in  JFrameworkConfig.cmake.in  embed_spv.py  mingw-w64.cmake
docs/: README.md
docs/architecture/: 01_LAYERED_DESIGN.md  02_AI_CONTROL_BUS.md  03_GRAPHICS_PRIMITIVES.md  04_CONTROLS_CATALOG.md  05_ROADMAP.md  06_SIGNAL_SYSTEM.md  07_STYLE_ENGINE.md  08_WINDOW_MANAGER.md  09_RENDERING_PIPELINE.md  10_DOCK_WIDGETS.md  11_LAYOUT_ENGINE.md
examples/app_shell/: main.cpp
examples/chart_demo/: main.cpp
examples/controls_catalog/: main.cpp
examples/dock_window_styles/: main.cpp
examples/empty_window/: main.cpp
examples/performance_panel/: main.cpp
examples/vector_demo/: main.cpp
include/genesis/concurrent/: WorkerThread.h
include/genesis/config/: Json.h  Settings.h
include/genesis/core/: AIPanel.h  AccessibilityBridge.h  AiBusHook.h  AiControlBus.h  AiDebug.h  Animator.h  ApplicationCore.h  AssetPipeline.h  BaseWidgets.h  CanvasWidget.h  DataBus.h  Database.h  Dialog.h  DockManager.h  DockRegistry.h  DockWidget.h  DragDrop.h  FocusManager.h  GenesisComponents.h  ImageWidget.h  Json.h  KeyEvent.h  MainThreadDispatcher.h  MenuSystem.h  MetaObject.h  PlatformCommon.h  ReferenceEvaluator.h  ReferenceResolver.h  SceneGraph.h  SerialPort.h  Settings.h  Signal.h  Splitter.h  StyleEngine.h  SymmetricArbiter.h  Timer.h  TranslationEngine.h  Variant.h  VariantJson.h  Window.h  (+3 more)
include/genesis/db/: Database.h
include/genesis/graphics/: Chart.h  FontEngine.h  GpuHal.h  RenderPrimitive.h  ShaderSpirv.h  VectorGraphics.h
include/genesis/io/: SerialPort.h
include/genesis/model/: ModelBinding.h  SortFilterModel.h  TableModel.h  TreeModel.h
include/genesis/platform/: Clipboard.h  FileDialog.h
include/j/app/: JAppWindow.h
include/j/concurrent/: WorkerThread.h
include/j/config/: Json.h  Settings.h
include/j/core/: AccessibilityBridge.h  Action.h  AiBusHook.h  AiControlBus.h  AiDebug.h  Animation.h  Animator.h  ApplicationCore.h  AssetPipeline.h  BaseWidgets.h  CanvasWidget.h  ColorPicker.h  Command.h  DataBus.h  Dialog.h  DockManager.h  DockRegistry.h  DockSpace.h  DockWidget.h  DragDrop.h  Easing.h  FocusManager.h  FrameTimer.h  GenesisComponents.h  ImageWidget.h  ItemView.h  JAiBus.h  JAiBusAbi.h  JArrow.h  JButton.h  JCheckBox.h  JCloseButton.h  JColorButton.h  JComboBox.h  JContainer.h  JControl.h  JDataGrid.h  JDoubleSpinBox.h  JFontButton.h  JGroupBox.h  (+60 more)
include/j/db/: Database.h
include/j/graphics/: Chart.h  FontEngine.h  GpuHal.h  RenderPrimitive.h  VectorGraphics.h
include/j/io/: SerialPort.h
include/j/model/: AbstractItemView.h  ItemDelegate.h  ItemModel.h  ModelBinding.h  SelectionModel.h  SortFilterModel.h  TableModel.h  TreeModel.h
include/j/platform/: Clipboard.h
src/accessibility/: AtSpiServer.cpp
src/graphics/: GpuHal.cpp  SoftwareGpuHal.h  VulkanGpuHal.cpp
src/io/: SerialPort.cpp
src/platform/: Clipboard.cpp
src/shaders/: image.frag  image.vert  rect.frag  rect.frag.spv  rect.vert  rect.vert.spv  text.frag  text.frag.spv  text.vert  text.vert.spv  vector.frag  vector.vert
src/tests/: test_aibus.cpp  test_aicontrolbus.cpp  test_aipanel.cpp  test_application.cpp  test_assets.cpp  test_canvas.cpp  test_chart.cpp  test_components.cpp  test_controls_foundation.cpp  test_database.cpp  test_databus.cpp  test_dialog.cpp  test_dispatcher.cpp  test_dock_options.cpp  test_dragdrop.cpp  test_fontengine.cpp  test_gpuhal.cpp  test_invalidation.cpp  test_json.cpp  test_models.cpp  test_new_features.cpp  test_primitives.cpp  test_reference.cpp  test_scenegraph.cpp  test_serial.cpp  test_settings.cpp  test_signal.cpp  test_style.cpp  test_undostack.cpp  test_variant.cpp  test_variant_integration.cpp  test_vector.cpp  test_widgets.cpp  test_window.cpp
tests/: a11y_test.cpp  action_test.cpp  animation_test.cpp  dehard_chrome_test.cpp  dehard_dialogs_test.cpp  dehard_widgets_test.cpp  dialogs_test.cpp  dragdrop_test.cpp  gallery_test.cpp  inputs_test.cpp  itemview_test.cpp  layout_sizepolicy_test.cpp  model_view_test.cpp  no_aibus_test.cpp  palette_adoption_test.cpp  stacked_test.cpp  style_test.cpp  text_editing_test.cpp  timer_test.cpp  undo_test.cpp  widget_core_test.cpp
tools/: ai_agent.cpp  ai_probe.cpp  jf-busctl.cpp
translations/: de.json  en.json  fr.json
